--- a/colorGame.css
+++ b/colorGame.css
@@ -19,6 +19,13 @@ h1 {
 	color: white;
 }
 
-span {
-	color: white;
+#stripe {
+	background: white;
+	text-align: center;
+	height: 30px;
+	color: black;
+}
+
+.selected {
+	background: blue;
 }
