--- a/colorGame.css
+++ b/colorGame.css
@@ -25,7 +25,7 @@ h1 {
 	line-height: 1.1;
 	color: white;
 	text-align: center;
-	background-color: steelblue;
+	background-color: #1E8FAD;
 	margin: 0;
 	font-weight: normal;
 	text-transform: uppercase;
@@ -51,7 +51,7 @@ h1 {
 
 .selected {
 	color: white;
-	background: steelblue;
+	background: #1E8FAD;
 }
 
 button {
@@ -60,7 +60,7 @@ button {
 	text-transform: uppercase;
 	height: 100%;
 	font-weight: 700;
-	color: steelblue;
+	color: #1E8FAD;
 	letter-spacing: 1px;
 	font-size: inherit;
 	transition: all 0.3s;
@@ -71,5 +71,5 @@ button {
 
 button:hover {
 	color: white;
-	background: steelblue;
+	background: #1E8FAD;
 }
